UI: The Metadata is gone for the rendered image #119427

Closed
opened 2024-03-13 16:55:56 +01:00 by Raimund Klink · 5 comments
Contributor

System Information
Operating system: Windows-11-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA RTX 2000 Ada Generation Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61

Blender Version
Broken: version: 4.0.2, 4.1, 4.2
Worked: 3.6.9

Caused by d579ac2b3f

Short description of error
The Metadata in the image viewer is no longer visible for the rendered image.

Exact steps for others to reproduce the error
Open Blender
Press F11 to open the image viewer
Enable the Metadata (View->Show Metatdata)
Press F12 to get the rendered image
No metadata anywhere

**System Information** Operating system: Windows-11-10.0.22631-SP0 64 Bits Graphics card: NVIDIA RTX 2000 Ada Generation Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 **Blender Version** Broken: version: 4.0.2, 4.1, 4.2 Worked: 3.6.9 Caused by d579ac2b3f80f729951c83fe67d996e5adad8760 **Short description of error** The Metadata in the image viewer is no longer visible for the rendered image. **Exact steps for others to reproduce the error** Open Blender Press F11 to open the image viewer Enable the Metadata (View->Show Metatdata) Press F12 to get the rendered image No metadata anywhere
Raimund Klink added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-13 16:55:57 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-14 09:43:25 +01:00
Member

Caused by d579ac2b3f, think I got a fix (it shows the metadata, but still needs some work to get the surrounding boxes right again)

Caused by d579ac2b3f80f729951c83fe67d996e5adad8760, think I got a fix (it shows the metadata, but still needs some work to get the surrounding boxes right again)
Philipp Oeser self-assigned this 2024-03-14 12:18:40 +01:00
Member

Caused by d579ac2b3f, think I got a fix (it shows the metadata, but still needs some work to get the surrounding boxes right again)

The metadata background color not showing is actually a separate issue, will check if this has been reported before (or will make a separate report for this)

> Caused by d579ac2b3f80f729951c83fe67d996e5adad8760, think I got a fix (it shows the metadata, but still needs some work to get the surrounding boxes right again) The metadata background color not showing is actually a separate issue, will check if this has been reported before (or will make a separate report for this)
Member

The metadata background color not showing is actually a separate issue, will check if this has been reported before (or will make a separate report for this)

Reported as #119502

> The metadata background color not showing is actually a separate issue, will check if this has been reported before (or will make a separate report for this) Reported as #119502
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-15 15:24:50 +01:00
Author
Contributor

Thank you guys :)

Thank you guys :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119427
No description provided.