Fix #119427: UI: The Metadata is gone for the rendered image

This got lost in d579ac2b3f80

Without having called `BKE_imbuf_stamp_info` on the ImBuf there will be
no metadata to show. This is now done again at the end of
`image_get_render_result`